add non group all_reduce in simple

--- a/src_simple/Makefile
+++ b/src_simple/Makefile
@@ -75,7 +75,7 @@ NVLDFLAGS += $(LIBRARIES:%=-l%)
 DST_DIR := $(BUILDDIR)
 SRC_FILES := $(wildcard *.cu)
 OBJ_FILES := $(SRC_FILES:%.cu=${DST_DIR}/%.o)
-BIN_FILES_LIST := all_reduce_group
+BIN_FILES_LIST := all_reduce_group all_reduce_simple
 BIN_FILES := $(BIN_FILES_LIST:%=${DST_DIR}/%_perf)
 
 build: ${BIN_FILES}
