--- a/src_simple/Makefile
+++ b/src_simple/Makefile
@@ -89,8 +89,7 @@ $(info CARDNAME $(NVCUFLAGS))
 DST_DIR := $(BUILDDIR)
 SRC_FILES := $(wildcard *.cu)
 OBJ_FILES := $(SRC_FILES:%.cu=${DST_DIR}/%.o)
-# BIN_FILES_LIST := all_reduce_group all_reduce_simple ofccl_all_reduce
-BIN_FILES_LIST := ofccl_all_reduce
+BIN_FILES_LIST := ofccl_all_reduce ofccl_all_gather
 BIN_FILES := $(BIN_FILES_LIST:%=${DST_DIR}/%_perf)
 
 build: ${BIN_FILES}
