add ucommd get_bw for checking the perf results (busbw).
* do check for AllReduce only.

* disable option '-t', thus nThreads = 1 always.

* message size, min+max bytes, timeouts, etc. are fed automatically.

* support checking results when running in comm split mode.

other changes:

* try to get physical hostname via env 'NODE_NAME'.

* check ib port state and print a log if not up nor active.

* default stepFactor is changed to '2', datatype is changed to 'bf16'.

--- a/src/Makefile
+++ b/src/Makefile
@@ -106,7 +106,12 @@ ${DST_DIR}/timer.o: timer.cc timer.h
 	@mkdir -p ${DST_DIR}
 	$(CXX) $(CXXFLAGS) -o $@ -c timer.cc
 
-${DST_DIR}/%_perf:${DST_DIR}/%.o ${DST_DIR}/common.o ${DST_DIR}/timer.o $(TEST_VERIFIABLE_OBJS)
+${DST_DIR}/ucommd.o: ucommd.cc ucommd.h
+	@printf "Compiling  %-35s > %s\n" $< $@
+	@mkdir -p ${DST_DIR}
+	$(CXX) $(CXXFLAGS) -o $@ -c ucommd.cc
+
+${DST_DIR}/%_perf:${DST_DIR}/%.o ${DST_DIR}/common.o ${DST_DIR}/timer.o ${DST_DIR}/ucommd.o $(TEST_VERIFIABLE_OBJS)
 	@printf "Linking  %-35s > %s\n" $< $@
 	@mkdir -p ${DST_DIR}
 	$(NVCC) -o $@ $(NVCUFLAGS) $^ ${NVLDFLAGS} -Xcompiler \"-Wl,-rpath,/usr/local/sihpc/lib\"
