--- a/docker/Dockerfile.cuda13.x.ubuntu22.04
+++ b/docker/Dockerfile.cuda13.x.ubuntu22.04
@@ -77,8 +77,7 @@ RUN wget https://download.open-mpi.org/release/open-mpi/v${MPI_SERIES}/openmpi-$
 # -------------------------
 # 5. Build nccl-tests
 # -------------------------
-RUN cd /tmp && \
-    git clone https://github.com/scitix/nccl-tests.git -b sync/upstream-20251216 && \
+RUN git clone https://github.com/scitix/nccl-tests.git -b sync/upstream-20251216 && \
     cd nccl-tests && \
     make MPI=1 MPI_HOME=/usr/local/sihpc && \
     mkdir -p /usr/local/sihpc/libexec/nccl-tests && \
@@ -97,10 +96,10 @@ RUN set -eux && \
     mkdir -p /usr/local/sihpc/lib && \
     cp /usr/local/cuda/lib64/libcudart* /usr/local/sihpc/lib/ && \
     cp /usr/lib/x86_64-linux-gnu/libnccl.so* /usr/local/sihpc/lib/
-#    cp /lib/x86_64-linux-gnu/libltdl.so.7.3.1 /usr/local/sihpc/lib/; \
-#    cp /usr/lib/x86_64-linux-gnu/libhwloc.so* /usr/local/sihpc/lib/; \
-#    cp /usr/lib/x86_64-linux-gnu/libevent_core* /usr/local/sihpc/lib/; \
-#    cp /usr/lib/x86_64-linux-gnu/libevent_pthreads* /usr/local/sihpc/lib/; \
+#    cp /lib/x86_64-linux-gnu/libltdl.so.7.3.1 /usr/local/sihpc/lib/ && \
+#    cp /usr/lib/x86_64-linux-gnu/libhwloc.so* /usr/local/sihpc/lib/ && \
+#    cp /usr/lib/x86_64-linux-gnu/libevent_core* /usr/local/sihpc/lib/ && \
+#    cp /usr/lib/x86_64-linux-gnu/libevent_pthreads* /usr/local/sihpc/lib/
 
 # -------------------------
 # 7. Fix library symlinks
@@ -121,36 +120,15 @@ RUN cd /usr/local/sihpc/lib && \
 #    ln -sf libltdl.so.7.3.1 libltdl.so.7 && \
 #    ln -sf libltdl.so.7 libltdl.so
 
-###########################
-# Package Stage
-###########################
-FROM ubuntu:${UBUNTU_VERSION} AS package
-
-# Re-declare args for this stage (values are inherited)
-ARG UBUNTU_VERSION
-ARG NCCL_PACKAGE_VERSION
-ARG MPI_VERSION
-ARG BUILD_DATE
-
 # Expose versions/date as environment variables for runtime shell expansion
 ENV NCCL_PACKAGE_VERSION=${NCCL_PACKAGE_VERSION} \
     MPI_VERSION=${MPI_VERSION} \
     BUILD_DATE=${BUILD_DATE}
 
-COPY --from=build /usr/local/sihpc /usr/local/sihpc
-
-WORKDIR /dist
-RUN apt-get update && apt-get install -y --no-install-recommends makeself && \
-    chmod +x /usr/local/sihpc/bin/install_sihpc && \
-    SAFE_NCCL_PKG="${NCCL_PACKAGE_VERSION//+/-}" && \
+WORKDIR /
+RUN SAFE_NCCL_PKG=$(printf '%s\n' "${NCCL_PACKAGE_VERSION}" | tr '+' '-') && \
     PACKAGE_FILENAME="sicl-nccl${SAFE_NCCL_PKG}-ompi${MPI_VERSION}-ubuntu${UBUNTU_VERSION}-${BUILD_DATE}.run" && \
     makeself --gzip /usr/local/sihpc \
     "${PACKAGE_FILENAME}" \
     "SiHPC MPI + NCCL + NCCL-tests Portable Installer" \
-    ./bin/install_sihpc && \
-    rm -rf /usr/local/sihpc && \
-    apt-get autoremove -y && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
-CMD ["bash", "-c", "SAFE_NCCL_PKG=${NCCL_PACKAGE_VERSION//+/-}; FILE=\"sicl-nccl${SAFE_NCCL_PKG}-ompi${MPI_VERSION}-ubuntu${UBUNTU_VERSION}-${BUILD_DATE}.run\"; ls -lh \"/build/$FILE\" && echo 'Build complete.'"]
+    ./bin/install_sihpc
