--- a/docker/Dockerfile.cuda13.x.ubuntu22.04
+++ b/docker/Dockerfile.cuda13.x.ubuntu22.04
@@ -46,7 +46,7 @@ RUN apt-get -o Acquire::http::No-Cache=true update && \
     apt-get install -y --no-install-recommends \
         build-essential gcc g++ curl git wget ca-certificates \
         make automake autoconf libtool pkg-config \
-        python3 python3-pip gzip xz-utils && \
+        python3 python3-pip gzip xz-utils makeself && \
     rm -rf /var/lib/apt/lists/*
 
 # -------------------------
