--- a/docker/Dockerfile.cuda13.x.ubuntu22.04
+++ b/docker/Dockerfile.cuda13.x.ubuntu22.04
@@ -71,8 +71,8 @@ RUN apt-get install -y --no-install-recommends \
 RUN wget https://download.open-mpi.org/release/open-mpi/v${MPI_SERIES}/openmpi-${MPI_VERSION}.tar.gz && \
     tar zxvf openmpi-${MPI_VERSION}.tar.gz && \
     cd openmpi-${MPI_VERSION} && \
-    ./configure --prefix=/usr/local/sihpc --with-cuda=/usr/local/cuda && \
-    make -j$(nproc) && make install && \
+    ./configure --prefix=/usr/local/sihpc --with-cuda=/usr/local/cuda > /dev/null && \
+    make -j$(nproc) > /dev/null && make install && \
     rm -rf /workspace/openmpi-${MPI_VERSION} /workspace/openmpi-${MPI_VERSION}.tar.gz
 
 # -------------------------
