--- a/docker/Dockerfile.cuda12.x.ubuntu20.04
+++ b/docker/Dockerfile.cuda12.x.ubuntu20.04
@@ -47,7 +47,7 @@ RUN mv /etc/apt/sources.list.d/cuda*.list /tmp/disabled-cuda.list || true && \
     apt-get install -y --no-install-recommends \
         build-essential gcc g++ curl git wget ca-certificates \
         make automake autoconf libtool pkg-config \
-        python3 python3-pip gzip xz-utils makeself && \
+        python3 python3-pip gzip xz-utils makeself > /dev/null 2>&1 && \
     rm -rf /var/lib/apt/lists/*
 
 # -------------------------
@@ -55,7 +55,7 @@ RUN mv /etc/apt/sources.list.d/cuda*.list /tmp/disabled-cuda.list || true && \
 # -------------------------
 RUN wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/cuda-keyring_1.1-1_all.deb && \
     dpkg -i cuda-keyring_1.1-1_all.deb && \
-    apt-get update
+    apt-get update > /dev/null 2>&1
 
 # -------------------------
 # 3. Install NCCL (pinned version)
@@ -63,7 +63,7 @@ RUN wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86
 RUN apt-mark unhold libnccl2 libnccl-dev || true && \
     apt-get install -y --no-install-recommends \
     libnccl2=${NCCL_PACKAGE_VERSION} \
-    libnccl-dev=${NCCL_PACKAGE_VERSION} && \
+    libnccl-dev=${NCCL_PACKAGE_VERSION}  > /dev/null 2>&1 && \
     apt-mark hold libnccl2 libnccl-dev && \
     ldconfig && \
     rm -rf /var/lib/apt/lists/*
@@ -72,7 +72,7 @@ RUN apt-mark unhold libnccl2 libnccl-dev || true && \
 # 4. Build OpenMPI from source
 # -------------------------
 RUN wget https://download.open-mpi.org/release/open-mpi/v${MPI_SERIES}/openmpi-${MPI_VERSION}.tar.gz && \
-    tar zxvf openmpi-${MPI_VERSION}.tar.gz && \
+    tar zxvf openmpi-${MPI_VERSION}.tar.gz > /dev/null 2>&1 && \
     cd openmpi-${MPI_VERSION} && \
     ./configure --prefix=/usr/local/sihpc --with-cuda=/usr/local/cuda > /dev/null  2>&1 && \
     make -j$(nproc) > /dev/null 2>&1 && make install && \
