--- a/docker/Dockerfile.cuda13.x.ubuntu22.04
+++ b/docker/Dockerfile.cuda13.x.ubuntu22.04
@@ -46,7 +46,7 @@ RUN apt-get -o Acquire::http::No-Cache=true update && \
     apt-get install -y --no-install-recommends \
         build-essential gcc g++ curl git wget ca-certificates \
         make automake autoconf libtool pkg-config \
-        python3 python3-pip gzip xz-utils makeself && \
+        python3 python3-pip gzip xz-utils makeself > /dev/null 2>&1 && \
     rm -rf /var/lib/apt/lists/*
 
 # -------------------------
@@ -54,14 +54,14 @@ RUN apt-get -o Acquire::http::No-Cache=true update && \
 # -------------------------
 RUN wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-keyring_1.1-1_all.deb && \
     dpkg -i cuda-keyring_1.1-1_all.deb && \
-    apt-get update
+    apt-get update > /dev/null 2>&1
 
 # -------------------------
 # 3. Install NCCL (pinned version)
 # -------------------------
 RUN apt-get install -y --no-install-recommends \
     libnccl2=${NCCL_PACKAGE_VERSION} \
-    libnccl-dev=${NCCL_PACKAGE_VERSION} && \
+    libnccl-dev=${NCCL_PACKAGE_VERSION} > /dev/null 2>&1 && \
     ldconfig && \
     rm -rf /var/lib/apt/lists/*
 
@@ -69,7 +69,7 @@ RUN apt-get install -y --no-install-recommends \
 # 4. Build OpenMPI from source
 # -------------------------
 RUN wget https://download.open-mpi.org/release/open-mpi/v${MPI_SERIES}/openmpi-${MPI_VERSION}.tar.gz && \
-    tar zxvf openmpi-${MPI_VERSION}.tar.gz && \
+    tar zxvf openmpi-${MPI_VERSION}.tar.gz > /dev/null 2>&1 && \
     cd openmpi-${MPI_VERSION} && \
     ./configure --prefix=/usr/local/sihpc --with-cuda=/usr/local/cuda > /dev/null  2>&1 && \
     make -j$(nproc) > /dev/null 2>&1 && make install && \
