--- a/docker/Dockerfile.cuda13.x.ubuntu22.04
+++ b/docker/Dockerfile.cuda13.x.ubuntu22.04
@@ -42,28 +42,28 @@ WORKDIR /workspace
 # -------------------------
 # 1. Base build dependencies
 # -------------------------
-RUN apt-get -o Acquire::http::No-Cache=true update && \
+RUN { apt-get -o Acquire::http::No-Cache=true update > build.log 2>&1 && \
     apt-get install -y --no-install-recommends \
         build-essential gcc g++ curl git wget ca-certificates \
         make automake autoconf libtool pkg-config \
-        python3 python3-pip gzip xz-utils makeself > /dev/null 2>&1 && \
-    rm -rf /var/lib/apt/lists/*
+        python3 python3-pip gzip xz-utils makeself >> build.log 2>&1 && \
+    rm -rf /var/lib/apt/lists/* && rm -f build.log; } || (cat build.log && false)
 
 # -------------------------
 # 2. Install CUDA keyring and restore NVIDIA repository
 # -------------------------
-RUN wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-keyring_1.1-1_all.deb && \
-    dpkg -i cuda-keyring_1.1-1_all.deb && \
-    apt-get update > /dev/null 2>&1
+RUN { wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-keyring_1.1-1_all.deb > build.log 2>&1 && \
+    dpkg -i cuda-keyring_1.1-1_all.deb >> build.log 2>&1 && \
+    apt-get update >> build.log 2>&1 && rm -f build.log; } || (cat build.log && false)
 
 # -------------------------
 # 3. Install NCCL (pinned version)
 # -------------------------
-RUN apt-get install -y --no-install-recommends \
+RUN { apt-get install -y --no-install-recommends \
     libnccl2=${NCCL_PACKAGE_VERSION} \
-    libnccl-dev=${NCCL_PACKAGE_VERSION} > /dev/null 2>&1 && \
-    ldconfig && \
-    rm -rf /var/lib/apt/lists/*
+    libnccl-dev=${NCCL_PACKAGE_VERSION} > build.log 2>&1 && \
+    ldconfig >> build.log 2>&1 && \
+    rm -rf /var/lib/apt/lists/* && rm -f build.log; } || (cat build.log && false)
 
 # -------------------------
 # 4. Build OpenMPI from source
@@ -72,15 +72,15 @@ RUN wget https://download.open-mpi.org/release/open-mpi/v${MPI_SERIES}/openmpi-$
     tar zxvf openmpi-${MPI_VERSION}.tar.gz > /dev/null 2>&1 && \
     cd openmpi-${MPI_VERSION} && \
     ./configure --prefix=/usr/local/sihpc --with-cuda=/usr/local/cuda > /dev/null  2>&1 && \
-    make -j$(nproc) > /dev/null 2>&1 && make install && \
+    make -j$(nproc) > /dev/null 2>&1 && make install > /dev/null 2>&1 && \
     rm -rf /workspace/openmpi-${MPI_VERSION} /workspace/openmpi-${MPI_VERSION}.tar.gz
 
 # -------------------------
 # 5. Build nccl-tests
 # -------------------------
-RUN git clone https://github.com/scitix/nccl-tests.git -b sync/upstream-20251216 && \
+RUN git clone --depth 1 --single-branch -b sync/upstream-20251216 https://github.com/scitix/nccl-tests.git > /dev/null 2>&1 && \
     cd nccl-tests && \
-    make MPI=1 MPI_HOME=/usr/local/sihpc && \
+    { make MPI=1 MPI_HOME=/usr/local/sihpc > build.log 2>&1 && rm -f build.log || (cat build.log && false); } && \
     mkdir -p /usr/local/sihpc/libexec/nccl-tests && \
     cp -rf build/*_perf /usr/local/sihpc/libexec/nccl-tests/ && \
     mkdir -p /usr/local/sihpc/bin && \
@@ -94,10 +94,11 @@ RUN git clone https://github.com/scitix/nccl-tests.git -b sync/upstream-20251216
 # -------------------------
 # 6. Collect runtime libraries (strict selection)
 # -------------------------
-RUN set -eux && \
-    mkdir -p /usr/local/sihpc/lib && \
-    cp /usr/local/cuda/lib64/libcudart* /usr/local/sihpc/lib/ && \
-    cp /usr/lib/x86_64-linux-gnu/libnccl.so* /usr/local/sihpc/lib/
+RUN { set -e && \
+    mkdir -p /usr/local/sihpc/lib > build.log 2>&1 && \
+    cp /usr/local/cuda/lib64/libcudart* /usr/local/sihpc/lib/ >> build.log 2>&1 && \
+    cp /usr/lib/x86_64-linux-gnu/libnccl.so* /usr/local/sihpc/lib/ >> build.log 2>&1 && \
+    rm -f build.log; } || (cat build.log && false)
 #    cp /lib/x86_64-linux-gnu/libltdl.so.7.3.1 /usr/local/sihpc/lib/ && \
 #    cp /usr/lib/x86_64-linux-gnu/libhwloc.so* /usr/local/sihpc/lib/ && \
 #    cp /usr/lib/x86_64-linux-gnu/libevent_core* /usr/local/sihpc/lib/ && \
@@ -130,7 +131,7 @@ ENV NCCL_PACKAGE_VERSION=${NCCL_PACKAGE_VERSION} \
 WORKDIR /
 RUN SAFE_NCCL_PKG=$(printf '%s\n' "${NCCL_PACKAGE_VERSION}" | tr '+' '-') && \
     PACKAGE_FILENAME="sicl-nccl${SAFE_NCCL_PKG}-ompi${MPI_VERSION}-ubuntu${UBUNTU_VERSION}-${BUILD_DATE}.run" && \
-    makeself --gzip /usr/local/sihpc \
-    "${PACKAGE_FILENAME}" \
-    "SiHPC MPI + NCCL + NCCL-tests Portable Installer" \
-    ./bin/install_sihpc > /dev/null 2>&1
+    { makeself --gzip /usr/local/sihpc \
+      "${PACKAGE_FILENAME}" \
+      "SiHPC MPI + NCCL + NCCL-tests Portable Installer" \
+      ./bin/install_sihpc > build.log 2>&1 && rm -f build.log; } || (cat build.log && false)
