--- a/docker/Dockerfile.cuda13.x.ubuntu22.04
+++ b/docker/Dockerfile.cuda13.x.ubuntu22.04
@@ -46,7 +46,7 @@ RUN { apt-get -o Acquire::http::No-Cache=true update > build.log 2>&1 && \
     apt-get install -y --no-install-recommends \
         build-essential gcc g++ curl git wget ca-certificates \
         make automake autoconf libtool pkg-config \
-        python3 python3-pip gzip xz-utils makeself >> build.log 2>&1 && \
+        python3 python3-pip gzip xz-utils >> build.log 2>&1 && \
     rm -rf /var/lib/apt/lists/* && rm -f build.log; } || (cat build.log && false)
 
 # -------------------------
@@ -123,13 +123,27 @@ RUN cd /usr/local/sihpc/lib && \
 #    ln -sf libltdl.so.7.3.1 libltdl.so.7 && \
 #    ln -sf libltdl.so.7 libltdl.so
 
+###########################
+# Package Stage
+###########################
+FROM ubuntu:20.04 AS package
+
+# Re-declare args for this stage (values are inherited)
+ARG UBUNTU_VERSION
+ARG NCCL_PACKAGE_VERSION
+ARG MPI_VERSION
+ARG BUILD_DATE
+
 # Expose versions/date as environment variables for runtime shell expansion
 ENV NCCL_PACKAGE_VERSION=${NCCL_PACKAGE_VERSION} \
     MPI_VERSION=${MPI_VERSION} \
     BUILD_DATE=${BUILD_DATE}
 
+COPY --from=build /usr/local/sihpc /usr/local/sihpc
+
 WORKDIR /
-RUN SAFE_NCCL_PKG=$(printf '%s\n' "${NCCL_PACKAGE_VERSION}" | tr '+' '-') && \
+RUN apt-get update && apt-get install -y --no-install-recommends makeself && \
+    SAFE_NCCL_PKG=$(printf '%s\n' "${NCCL_PACKAGE_VERSION}" | tr '+' '-') && \
     PACKAGE_FILENAME="sicl-nccl${SAFE_NCCL_PKG}-ompi${MPI_VERSION}-ubuntu${UBUNTU_VERSION}-${BUILD_DATE}.run" && \
     { makeself --gzip /usr/local/sihpc \
       "${PACKAGE_FILENAME}" \
